Vector Icons: DCHECK to prevent icons from being created without a size.

gfx::VectorIcons currently support being created via CreateVectorIcon() without
any size. In this case, a default size is retrieved from the icon's file
(provided via a CANVAS_DIMENSIONS directive). However, icons may not always
specify a CANVAS_DIMENSIONS, so if the code is provided no size *and* there is
no CANVAS_DIMENSIONS, it will fall back to a size of 48.

This isn't ideal as it may result in some icons being drawn for a canvas that is
too small or too large, so add a DCHECK to prevent this.

Bug: 836116
Change-Id: I176d4b5ed7f07fe679a2b70addcce02a09a6b5a3
Reviewed-on: https://chromium-review.googlesource.com/1029556
Commit-Queue: Patti <patricialor@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554693}
Former-commit-id: d2d7a5197e6f286ca072eff51a2ab7ce99885cef